<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="syncplay_settings">

    <PreferenceCategory app:title="@string/settings_categ_general">
        <ListPreference
            app:defaultValue="en"
            app:entries="@array/Lang"
            app:entryValues="@array/LangValues"
            app:key="lang"
            app:summary="@string/setting_display_language_summry"
            app:title="@string/setting_display_language_title" />

        <CheckBoxPreference
            app:defaultValue="true"
            app:key="save_info"
            app:summary="@string/setting_remember_join_info_summary"
            app:title="@string/setting_remember_join_info_title" />

        <Preference
            android:summary="@string/media_directories_setting_summary"
            app:key="media_directories"
            app:title="@string/media_directories" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_categ_room">
        <CheckBoxPreference
            app:defaultValue="true"
            app:key="ready_firsthand"
            app:summary="@string/setting_ready_firsthand_summary"
            app:title="@string/setting_ready_firsthand_title" />

        <CheckBoxPreference
            app:defaultValue="true"
            app:key="pause_if_someone_left"
            app:summary="@string/setting_pause_if_someone_left_summary"
            app:title="@string/setting_pause_if_someone_left_title" />

        <CheckBoxPreference
            app:defaultValue="true"
            app:key="warn_file_mismatch"
            app:summary="@string/setting_warn_file_mismatch_summary"
            app:title="@string/setting_warn_file_mismatch_title" />

        <ListPreference
            app:defaultValue="1"
            app:entries="@array/fileinfoBehavior"
            app:entryValues="@array/fileinfoBehaviorValues"
            app:key="fileinfo_behavior_name"
            app:summary="@string/setting_fileinfo_behaviour_name_summary"
            app:title="@string/setting_fileinfo_behaviour_name_title" />

        <ListPreference
            app:defaultValue="1"
            app:entries="@array/fileinfoBehavior"
            app:entryValues="@array/fileinfoBehaviorValues"
            app:key="fileinfo_behavior_size"
            app:summary="@string/setting_fileinfo_behaviour_size_summary"
            app:title="@string/setting_fileinfo_behaviour_size_title" />

        <SeekBarPreference
            android:max="60"
            app:defaultValue="12"
            app:key="rewind_threshold"
            app:min="3"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true"
            app:summary="@string/setting_rewind_threshold_summary"
            app:title="@string/setting_rewind_threshold_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <!--    <PreferenceCategory app:title="@string/settings_categ_video">-->
    <!--        <SeekBarPreference-->
    <!--            android:max="60"-->
    <!--            app:defaultValue="18"-->
    <!--            app:key="subtitle_size"-->
    <!--            app:min="8"-->
    <!--            app:seekBarIncrement="1"-->
    <!--            app:showSeekBarValue="true"-->
    <!--            app:summary="@string/setting_subtitle_size_summary"-->
    <!--            app:title="@string/setting_subtitle_size_title"-->
    <!--            app:useSimpleSummaryProvider="true" />-->
    <!--    </PreferenceCategory>-->

    <PreferenceCategory app:title="@string/settings_categ_player">
        <CheckBoxPreference
            app:defaultValue="false"
            app:key="use_custom_buffer_boolean"
            app:summary="@string/setting_use_buffer_summary"
            app:title="@string/setting_use_buffer_title" />
        <SeekBarPreference
            android:max="60"
            app:defaultValue="50"
            app:dependency="use_custom_buffer_boolean"
            app:key="player_max_buffer"
            app:min="1"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true"
            app:summary="@string/setting_max_buffer_summary"
            app:title="@string/setting_max_buffer_title"
            app:useSimpleSummaryProvider="true" />
        <SeekBarPreference
            android:max="30"
            app:defaultValue="15"
            app:dependency="use_custom_buffer_boolean"
            app:key="player_min_buffer"
            app:min="1"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true"
            app:summary="@string/setting_min_buffer_summary"
            app:title="@string/setting_min_buffer_title"
            app:useSimpleSummaryProvider="true" />

        <SeekBarPreference
            android:max="15000"
            app:defaultValue="2500"
            app:dependency="use_custom_buffer_boolean"
            app:key="player_playback_buffer"
            app:min="100"
            app:seekBarIncrement="100"
            app:showSeekBarValue="true"
            app:summary="@string/setting_playback_buffer_summary"
            app:title="@string/setting_playback_buffer_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_categ_misc">

        <SwitchPreference
            app:defaultValue="false"
            app:key="tls"
            android:enabled="false"
            app:summary="@string/setting_tls_summary"
            app:title="@string/setting_tls_title" />

        <Preference
            android:summary="@string/setting_resetdefault_summary"
            app:key="resetdefault"
            app:title="@string/setting_resetdefault_title" />
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>