<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vidplayerhud"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@drawable/hud_gradient"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    tools:ignore="ContentDescription">

    <LinearLayout
        android:id="@+id/button_row_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="4dp">

        <ImageButton
            android:id="@+id/syncplay_screen"
            style="@style/ExoMediaButton.FastForward"
            android:src="@drawable/ic_screen"
            app:tint="#FFD66F"
            android:contentDescription="@string/room_button_desc_aspect_ratio"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/syncplay_shared_playlist"
            style="@style/ExoMediaButton.FastForward"
            android:src="@drawable/ic_shared_playlist"
            app:tint="#FFD66F"
            android:contentDescription="@string/room_button_desc_shared_playlist"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@id/exo_audio_track"
            style="@style/ExoMediaButton.FastForward"
            android:src="@drawable/exo_ic_audiotrack"
            android:contentDescription="@string/room_button_desc_audio_tracks"
            app:tint="#FFD66F" />

        <ImageButton
            android:id="@id/exo_subtitle"
            style="@style/ExoMediaButton.FastForward"
            android:src="@drawable/ic_subtitles"
            android:contentDescription="@string/room_button_desc_subtitle_tracks"
            app:tint="#FFD66F" />

        <ImageButton
            android:id="@id/exo_rew"
            style="@style/ExoMediaButton.Rewind"
            android:contentDescription="@string/room_button_desc_rewind"
            app:tint="#FFD66F" />

        <ImageButton
            android:id="@id/exo_repeat_toggle"
            style="@style/ExoMediaButton"
            android:contentDescription="@string/room_button_desc_toggle"
            app:tint="#FFD66F" />

        <ImageButton
            android:id="@id/exo_play"
            style="@style/ExoMediaButton.Play"
            android:contentDescription="@string/room_button_desc_play"
            app:tint="#FFD66F" />

        <ImageButton
            android:id="@id/exo_pause"
            style="@style/ExoMediaButton.Pause"
            android:contentDescription="@string/room_button_desc_pause"
            app:tint="#FFD66F" />

        <ImageButton
            android:id="@id/exo_ffwd"
            style="@style/ExoMediaButton.FastForward"
            android:contentDescription="@string/room_button_desc_ffwd"
            app:tint="#FFD66F" />

        <ImageButton
            android:id="@+id/syncplay_addfile"
            style="@style/ExoMediaButton.FastForward"
            android:src="@drawable/ic_add_video"
            android:contentDescription="@string/room_button_desc_add"
            app:tint="#FFD66F" />

        <ImageButton
            android:id="@+id/syncplay_lock"
            style="@style/ExoMediaButton.FastForward"
            android:src="@drawable/ic_locked"
            android:contentDescription="@string/room_button_desc_lock"
            app:tint="#FFD66F" />

        <ImageButton
            android:id="@+id/syncplay_more"
            style="@style/ExoMediaButton.FastForward"
            android:src="@drawable/ic_more"
            android:contentDescription="@string/room_button_desc_more"
            app:tint="#FFD66F" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@id/exo_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:includeFontPadding="false"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textColor="#FFBEBEBE"
            android:textSize="14sp"
            android:textStyle="bold" />

        <View
            android:id="@id/exo_progress_placeholder"
            android:layout_width="0dp"
            android:layout_height="26dp"
            android:layout_weight="1" />

        <TextView
            android:id="@id/exo_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:includeFontPadding="false"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textColor="#FFBEBEBE"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>