<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/pageConnect"
    tools:context=".main.ConnectFragment"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:ignore="labelFor, Autofill">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/connect_Logo"
            android:layout_width="128dp"
            android:layout_height="128dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/syncplay_logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/connect_Username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/directive4bold"
            android:text="@string/connect_username_a"
            android:textAlignment="center"
            android:textColor="@color/sp3"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/connect_Logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/connect_UsernameInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/connect_username_b"
            android:textColorHint="@color/sp_screener"
            app:boxStrokeColor="@color/sp_shade"
            app:counterEnabled="true"
            app:counterMaxLength="150"
            app:counterTextColor="@color/sp2"
            app:endIconMode="clear_text"
            app:helperText="@string/connect_username_c"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/sp_shade"
            app:layout_constraintTop_toBottomOf="@id/connect_Username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.6"
            app:placeholderTextColor="@color/sp_shade"
            app:startIconContentDescription="Username"
            app:startIconDrawable="@drawable/ic_username"
            app:startIconTint="@color/preroom_ic_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/connect_UsernameInputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="150"
                android:singleLine="true"
                android:textColor="#555555" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/connect_Roomname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/directive4bold"
            android:text="@string/connect_roomname_a"
            android:textAlignment="center"
            android:textColor="@color/sp3"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/connect_UsernameInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/connect_RoomnameInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:hint="@string/connect_roomname_b"
            android:textColorHint="@color/sp_screener"
            app:boxStrokeColor="@color/sp_shade"
            app:counterEnabled="true"
            app:counterMaxLength="35"
            app:counterTextColor="@color/sp2"
            app:endIconMode="clear_text"
            app:helperText="@string/connect_roomname_c"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/sp_shade"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/connect_Roomname"
            app:layout_constraintWidth_percent="0.6"
            app:placeholderTextColor="@color/sp_shade"
            app:startIconContentDescription="Username"
            app:startIconDrawable="@drawable/ic_room"
            app:startIconTint="@color/preroom_ic_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/connect_RoomnameInputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="#555555" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/connect_serverTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/directive4bold"
            android:text="@string/connect_server_a"
            android:textAlignment="center"
            android:textColor="@color/sp3"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/connect_RoomnameInput" />

        <TextView
            android:id="@+id/connect_serverHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/directive4bold"
            android:text="@string/connect_server_c"
            android:textAlignment="center"
            android:textColor="@color/sp_shade"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/connect_serverTitle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/connect_serverSelect"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:fontFamily="@font/directive4bold"
            android:hint="@string/connect_server_b"
            android:textColorHint="@color/sp_screener"
            app:boxStrokeColor="@color/sp_shade"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/connect_serverHint"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintWidth_percent="0.7"
            app:placeholderTextColor="@color/sp_shade">

            <AutoCompleteTextView
                android:id="@+id/sp_menuAutocomplete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textColor="#555555" />
        </com.google.android.material.textfield.TextInputLayout>


        <EditText
            android:id="@+id/connect_customServerAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/connect_server_b"
            android:inputType="text"
            android:maxLength="50"
            android:singleLine="true"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/connect_customServerPort"
            app:layout_constraintTop_toBottomOf="@id/connect_serverSelect"
            app:layout_constraintWidth_percent="0.55" />

        <EditText
            android:id="@+id/connect_customServerPort"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/connect_port"
            android:inputType="number"
            android:maxLength="5"
            android:singleLine="true"
            android:visibility="gone"
            app:layout_constraintLeft_toRightOf="@id/connect_customServerAddress"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/connect_serverSelect"
            app:layout_constraintWidth_percent="0.25" />

        <EditText
            android:id="@+id/connect_customServerPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/connect_custom_server_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/connect_customServerAddress"
            app:layout_constraintWidth_percent="0.8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/connect_JoinButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/directive4bold"
            android:padding="16dp"
            android:text="@string/connect_button"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:backgroundTint="@color/sp_screener"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/connect_customServerPassword" />

        <TextView
            android:id="@+id/connect_Footnote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/directive4bold"
            android:text="@string/connect_footnote"
            android:textAlignment="center"
            android:textColor="#BFDADADA"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/connect_JoinButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="1" />

        <TextView
            android:id="@+id/connect_Footnote_B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/directive4bold"
            android:text=""
            android:textAlignment="center"
            android:textColor="#BFDADADA"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/connect_JoinButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="1" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>